name:                ob
version:             0.1.0.0
author:              Max Taldykin
maintainer:          jorpic@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ob
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
    base >=4.7 && <4.8,
    text,
    containers,
    transformers,
    configurator,
    aeson,
    scotty,
    wai-middleware-static,
    websockets,
    process,
    uuid, unix,
    network-uri

  default-extensions:
    OverloadedStrings,
    LambdaCase, NamedFieldPuns, RecordWildCards,
    TemplateHaskell
